--- a/wiki/RapidTriage.wiki
+++ b/wiki/RapidTriage.wiki
@@ -1,5 +1,4 @@
-#summary One-sentence summary of this page.
-automated intrusion discovery for linux, osx, and windows
+#summary automated intrusion discovery for linux, osx, and windows
 
 = Introduction =
 
